--- a/paper.tex
+++ b/paper.tex
@@ -222,7 +222,7 @@ time-dependent compressible turbulence while adopting a simplified
 treatment of CR that does not follow the transport of the CR
 distribution function. Our approach of parametrizing turbulence
 enables us to vary parameters associated with the unknown continuation
-of magneto-hydrodynamical turbulence below the MHD scale and the
+of magneto-hydrodynamical (MHD) turbulence below the MHD scale and the
 overall amplitude of compressible waves (that can in principle vary
 depending on the details of a particular cluster merger).
 
@@ -919,43 +919,40 @@ the gamma-ray observations (see Section~\ref{sect:radio_spec}).
 \section{Cosmological simulations}
 \label{sec:results}
 
-In this section we show that our three models individually reproduce
-the observed Coma radio halo without violating gamma-ray bounds. The
-level of emission is mainly driven by how efficient the CRs are
-reaccelerated and for how long. After turbulent reacceleration, the
-volume-weighted, relative CRp energy density and relative CRp number
-density inside the RH for \Mflatturb (\Mstream), are found to be 2 (3)
-\% and $2\times10^{-8}$ ($5\times10^{-8}$), respectively. As we will
-see later, these densities are just of the right order of magnitude to
-reproduce radio observations in the Coma cluster. We exploit the large
-uncertainty in the turbulent profile and adjust $\alpha_\rmn{tu}$ for
-each model so that the CRs have the correct spatial profile to match
-the radio emission. The shape of the spectrum for each of model is
-more complicated and is determined both from reacceleration and as
-well as the gains and losses during the formation of the cluster. It
-depends only weakly on the specifics of the CR injection at the shocks
-(where the Mach number distribution of the shocks is the most
-important quantity). The normalization of the spectrum is mainly
-determined from the maximum acceleration efficiency (together with the
-uncertain parameters $X_\rmn{tu}$, $\tau_\rmn{cl}$, and $k_0$). Given
-the freedom in the turbulence, it might not be surprising that we match
-the radio profile in Coma. Although, matching the spectrum without
-violating gamma-ray bounds for each of our three models is more
-surprising and is not a consequence of parameter fitting. We believe
-that it is ultimately a consequence of the adopted physics and hint
-that reacceleration is a viable explanation for giant radio
-halos. Below we discuss in more detail the different emission
-components of Coma.
+In this setion, we solve the Fokker-Planck equation for CR transport
+on Lagrangian particle trajectories through cosmic history.  We
+concentrate on three scenarios. (i) In model {\em M-primaries}, we
+assume that CR electrons, which have been accelerated by cosmic
+formation shocks and successively cooled by inverse Compton and
+synchrotron losses, form a fossil seed population for
+reacceleration. (ii) In model {\em M-streaming}, we account for the
+outward streaming of central CRps, which produces a flat CR
+distribution in the ICM and equivalently a flat secondary seed
+population of CRe for reacceleration. (iii) In model {\em
+  M-turbulence} we adopt a spatially flatter turbulent profile than
+what was adopted before but assume that seed CRps and secondary CRes
+follow the steep profile that is suggested by structure formation
+simulations.
+
+The level of emission is mainly driven by how efficient the CRs are
+reaccelerated and for how long. Hence, we exploit the exponential
+sensitivity of reacceleration on the level of turbulence and adopt
+different radial profiles of the turbulent energy density. We ask the
+question how differently the turbulent profiles need to be shaped in
+order to reproduce the observed radial profiles of the radio
+emission. For these models, we then compute radio spectra and
+gamma-ray luminosities and compare to observational data.
 
 
 \subsection{Modelling diffusive shock acceleration}
 \label{sec:cosmo_sim}
 In this paper we focus on our simulated cluster, g72a, which is a
-massive $1.6\times10^{15}\,M_\odot$ cluster that experienced a merger
-about 1 to 2 Gyrs ago \citep{2009MNRAS.399..497D}. Since the cluster
-mass, density and temperature profiles are all similar to the well
-studied Coma cluster \citep{2007MNRAS.378..385P,pinzke10}, we will
-compare our calculations to radio and gamma-ray observations of Coma.
+massive cluster of mass $M_{200}=1.6\times10^{15}\,M_\odot$ that
+experienced a merger about 1 Gyr ago
+\citep{2009MNRAS.399..497D}. Since the cluster mass, density and
+temperature profiles are all similar to the well studied Coma cluster
+\citep{2007MNRAS.378..385P,pinzke10}, we will compare our calculations
+to radio and gamma-ray observations of Coma.
 
 We use a simple test-particle model for the CR acceleration and
 injection, where each shock injects CRs that trace a power-law in
@@ -969,7 +966,7 @@ determined by the normalization $C(t)$ and the spectral index
 $\alpha_{\rmn{inj}}$ that depends on the adiabatic index
 $\gamma_\rmn{ad} = 5/3$ and the Mach number of the shock
 $\mathcal{M}$. It is given by the ratio of the upstream velocity
-($u_2$) and the sound speed ($c_s$). The CR number density and CR
+($\varv_2$) and the sound speed ($c_{\rm s}$). The CR number density and CR
 energy density are derived from
 \begin{eqnarray}
 n_\rmn{p} &=&
@@ -985,19 +982,19 @@ shocked plasma \citep{kang11}:
 \begin{eqnarray}
   \label{eq:qinj}
   p_\rmn{inj} &=& x_\rmn{inj} p_\rmn{th} = x_\rmn{inj} \sqrt{\frac{2 \,\kB T_2}{m c^2}}\,, \nonumber \\
-  \rmn{where}\quad x_\rmn{inj} &\approx& 1.17 \frac{u_2}{p_{\rmn{th}}\,c} \left(1+
+  \rmn{where}\quad x_\rmn{inj} &\approx& 1.17 \frac{\varv_2}{p_{\rmn{th}}\,c} \left(1+
   \frac{1.07}{\epsilon_B}\right) \left(\frac{\mathcal{M}}{3}\right)^{0.1}\,.
 \end{eqnarray}
 Here $\eb = B_0/B_{\perp}$, $B_0$ is the amplitude of the downstream
 MHD wave turbulence, and $B_{\perp}$ is the magnetic field along the
 shock normal. The physical range of $\eb$ is quite uncertain due to
 complex plasma interactions. In this paper, we adopt $\eb = 0.23$,
-which we will later see corresponds to a conservative maximum energy
-acceleration efficiency for protons of $10\%$. To derive the
+which -- as we will later see -- corresponds to a conservative maximum
+energy acceleration efficiency for protons of $10\%$. To derive the
 acceleration efficiency, $\zeta_\rmn{inj}$, we first have to infer the
 particle injection efficiency, which is the fraction of downstream
 thermal gas particles which experience diffusive shock acceleration
-\citep[for details see ][]{pinzke13},
+\citep[for details see][]{pinzke13},
 \begin{equation}
   \label{eq:eta}
   \eta_\rmn{p,lin} =
@@ -1076,7 +1073,7 @@ CRp and CRe have the same distribution function $f_\rmn{e}(p) =
 K_\rmn{ep} f_\rmn{p}(p)$, with a different normalization (due to
 differing acceleration efficiencies) $K_\rmn{ep}=0.1$ \citep[which is
   viable for primarily perpendicular
-  shocks][]{2014ApJ...794..153G}. While this appears to contradict the
+  shocks,][]{2014ApJ...794..153G}. While this appears to contradict the
 radial bias of magnetic fields in the bulk of the ICM as suggested by
 observations \citep{2010NatPh...6..520P} and cluster simulations
 \citep{2011ApJ...740...81R}, it does not necessarily apply to the
@@ -1086,122 +1083,6 @@ giant radio relics \citep{2010Sci...330..347V}.
 
 
 \subsection{Radio emission profile}
-
-%%% moved from before
-
-\begin{figure}
-  \includegraphics[width=1.0\columnwidth]{turb_profile_ratio_tot.eps}
-  \caption{The ratio of turbulent-to-thermal energy densities (solid
-    lines) and cumulative energies (dotted lines) in our three
-    models. The energy densities are parametrized as
-    $\eps_\rmn{turb} \propto
-    \eps_\rmn{th}^{(\alpha_{\rmn{tu}}+1)/2}/T^{1/4}$ and
-    normalized such that the total turbulent energy in compressible
-    modes $E_\rmn{turb}$ for each scenario makes up about 20\% of the
-    total thermal energy $E_\rmn{th}$ inside the radio halo
-    ($R_\rmn{RH}\approx0.6R_{200}$). The turbulent profiles explore
-    the uncertainty in the cluster turbulence and are motivated by the
-    cosmological simulation in
-    \citep{2009ApJ...705.1129L,2010ApJ...725.1452S,2011A&A...529A..17V}.}
-  \label{fig:turb}
-\end{figure}
-
-In this work we investigate
-different spatial models for injected turbulence. With the above
-choice of normalization, the turbulent energy density becomes
-$\eps_\rmn{turb} \propto
-\eps_\rmn{th}^{(\alpha_\rmn{tu}+1)/2}/T^{1/4}$, where $T$ is the
-temperature of the gas, $\alpha_\rmn{tu}= 0.67$ for \Mflatturb,
-$\alpha_\rmn{tu}= 0.82$ for \Mstream, and $\alpha_\rmn{tu}= 0.88$ for
-\Mprimary (see Figure~\ref{fig:turb} for visualization). 
-
-Note that in previous work on the Coma cluster, $\eps_\rmn{turb}
-\propto \eps_\rmn{th}$ was adopted which roughly corresponds to
-$\alpha_\rmn{tu}= 1$ \citep{brunetti12} and together with the
-different distributions for seed CRes constitute the main differences
-compared to our work. Our flatter turbulent profiles are motivated by
-fits to cosmological simulations
-\citep{2009ApJ...705.1129L,2010ApJ...725.1452S,2011A&A...529A..17V,2012ApJ...758...74B}
-and the range indicates uncertainties of the turbulent profile in
-Coma. Future observations (by Astro-H) and simulations will help to
-clarify this issue.
-
-In Figure~\ref{fig:tauD} we show how the turbulent reacceleration
-timescales in our three models scale with radius. As expected, the
-\Mprimary model with $\alpha_\rmn{tu}=0.88$ has the flattest profile
-with $\tau_D\approx0.4\,\rmn{Gyr}$, where the small dip at large
-radius driven by the decrease in thermal energy density. The
-\Mflatturb model has the the flattest turbulent profile parameterized
-by the smaller $\alpha_\rmn{tu}$ which explains the steepest $\tau_D$
-profile. Note that a fixed reacceleration timescale is required to
-explain the observations at each radius and for each model (see also
-Table~\ref{tab:timescales}). This allows us to interchange the value
-of uncertain parameters $\tau_\rmn{cl} \sim X_\rmn{tu}^2 \sim k_0$,
-i.e. a longer reacceleration duration have to be compensated by
-lowering the level of turbulence or increasing the physical injection
-scale of turbulence to keep $\tau_D$ constant.
-
-\begin{figure}
-  \includegraphics[width=1.0\columnwidth]{tau_reacc.eps}
-  \caption{Turbulent reacceleration timescales for our simulated
-    cluster g72a. We show in linear-log the reacceleration timescale
-    ($\tau_D$) as a function of radius $R$ for our three models:
-    \Mprimary (green dotted line), \Mstream (blue dashed line), and
-    \Mflatturb (red solid line). Note that the timescales are derived
-    during the last 100~Myrs in time in our simulations.}
-  \label{fig:tauD}
-\end{figure}
-
-
-%%%
-
-In Fig.~\ref{fig:sync_profile}, we find that all three scenarios in
-which the seeds undergo Fermi-II reacceleration can reproduce the Coma
-RH profile at 352~MHz. \AP{It is also clear that without turbulent
-  reacceleration, the simulated radio profiles are too steep.} In the
-panel {\it Brunetti et al. (2012)} we show that without CR streaming
-or a flat turbulent profile, our simulations of reaccelerated CRs
-produce radio profiles that are too steep. Indeed, even using the
-assumptions of previous work -- where complete freedom in the seed
-population was allowed -- it is not possible to reproduce observations
-in both frequencies in any model. Note that decreasing acceleration
-efficiency with radius does not change this conclusion much because of
-the weak radial dependence of $D_\rmn{pp}(R)\propto
-\eps_\rmn{th}(R)^{\alpha_\rmn{tu}-1}\sqrt{T(R)}$. This signals that
-the problem is generic and requires either additional modifications to
-the plasma physics of acceleration or a better understanding of
-potential observational systematics. In addition there are differences
-in the simulated density and temperature profiles in comparison to the
-observed profile in Coma that impact the CR abundance as well as
-cooling and reacceleration.
-
-In principle, reacceleration via TTD leads to spectral steepening with
-particle energy due to the inefficiency of the acceleration process to
-counter the stronger cooling losses with increasing energy. Since
-synchrotron emission peaks at frequency $\nu_\rmn{syn}\simeq 1\,
-B/\umu\rmn{G} (\gamma/10^4)^2\,\rmn{GHz}$, this translates into a
-spectral steepening of the radio spectrum (see \AP{the left panel of
-  Fig.~\ref{fig:sync_spectrum}} where the continuous injection of
-secondary CRes is absent). A given radio window samples higher energy
-electrons for a decreasing field strength in the cluster
-outskirts. Hence, the spectral steepening with energy should translate
-into a radial spectral steepening \citep{brunetti12}. However, because
-of the weak dependence of the electron Lorentz factor on emission
-frequency ($\gamma\propto\sqrt{\nu_\rmn{syn}}$), this effect is only
-visible in our simulations for $\nu_\rmn{syn}\gtrsim5$~GHz. Most
-importantly, our simulated fluid elements at a given radius sample a
-broad distribution of shock history, density and temperature, which
-implies very similar synchrotron brightness profiles at
-$\nu_\rmn{syn}=352$~MHz and 1.4 GHz. The discrepancy of the observed
-and simulated 1.4 GHz profiles could instead be due to systematic flux
-calibration error in single dish observations. These could arise, for
-instance, due to errors in point source subtraction. Interestingly, we
-can match the 1.4 GHz data if we reduce the zero point by adding 10\%
-of the central flux to every data point; this flattens the outer
-profile\footnote{Lawrence Rudnick, private communication.}.
-Alternatively, this may point to weaknesses in the theoretical
-modeling of the particle acceleration process and may require a
-stronger cutoff in the particle energy spectrum.
 
 \begin{figure*}
 \begin{minipage}{1\columnwidth}
@@ -1241,6 +1122,123 @@ stronger cutoff in the particle energy spectrum.
   \label{fig:sync_profile}
 \end{figure*}
 
+
+In Fig.~\ref{fig:sync_profile}, we show radial profiles for the radio
+emission in all three scenarios in which the seeds undergo Fermi-II
+reacceleration in turbulent fields that are shaped such as to
+reproduce the Coma RH profile at 352~MHz.  Adopting our
+parametrisation for the volumetric injection rate of turbulent energy,
+$I_0\propto \eps_\rmn{th}^{\alpha_\rmn{tu}}$, we find
+$\alpha_\rmn{tu}= 0.67$ for \Mflatturb, $\alpha_\rmn{tu}= 0.82$ for
+\Mstream, and $\alpha_\rmn{tu}= 0.88$ for \Mprimary. As a result, the
+ratio of turbulent-to-thermal energy densities slightly increase with
+radius as shown in Fig.~\ref{fig:turb}.  After turbulent
+reacceleration, the volume-weighted, relative CRp energy density and
+relative CRp number density inside the RH for \Mflatturb (\Mstream),
+are found to be 2 (3) \% and $2\times10^{-8}$ ($5\times10^{-8}$),
+respectively.
+
+%the turbulent energy density becomes $\eps_\rmn{turb} \propto
+%\eps_\rmn{th}^{(\alpha_\rmn{tu}+1)/2}/T^{1/4}$, where $T$ is the
+%temperature of the gas,
+
+\begin{figure}
+  \includegraphics[width=1.0\columnwidth]{turb_profile_ratio_tot.eps}
+  \caption{The ratio of turbulent-to-thermal energy densities (solid
+    lines) and cumulative energies (dotted lines) in our three
+    models. The energy densities are parametrized as
+    $\eps_\rmn{turb} \propto
+    \eps_\rmn{th}^{(\alpha_{\rmn{tu}}+1)/2}/T^{1/4}$ and
+    normalized such that the total turbulent energy in compressible
+    modes $E_\rmn{turb}$ for each scenario makes up about 20\% of the
+    total thermal energy $E_\rmn{th}$ inside the radio halo
+    ($R_\rmn{RH}\approx0.6R_{200}$). The turbulent profiles explore
+    the uncertainty in the cluster turbulence and are motivated by the
+    cosmological simulation in
+    \citep{2009ApJ...705.1129L,2010ApJ...725.1452S,2011A&A...529A..17V}.}
+  \label{fig:turb}
+\end{figure}
+
+
+Figure~\ref{fig:sync_profile} demonstrates that the modeled radio
+profiles without turbulent reacceleration are too steep.  In the
+bottom right panel of Fig.~\ref{fig:sync_profile} (labeled with
+Brunetti et al. 2012), we show that our simulated profiles of
+reaccelerated CRs, which only take advective CR transport into
+account, i.e. they neglect CR streaming or a flatter turbulent
+profile, produce radio profiles that are too steep. Indeed, even using
+the assumptions of previous work -- where complete freedom in the seed
+population was allowed -- it is not possible to reproduce observations
+in both frequencies in any model.\footnote{Note that in previous work
+  on the Coma cluster, $\eps_\rmn{turb} \propto \eps_\rmn{th}$ was
+  adopted which approximately corresponds to $\alpha_\rmn{tu}= 1$
+  \citep{brunetti12} and together with the different distributions for
+  seed CRes constitute the main differences compared to our work.}
+Decreasing the acceleration efficiency with radius does not change
+this conclusion much because of the weak radial dependence of
+$D_\rmn{pp}(R)\propto \eps_\rmn{th}(R)^{\alpha_\rmn{tu}-1}
+\sqrt{T(R)}$. This signals that the problem is generic and requires
+either additional modifications to the plasma physics of acceleration
+or a better understanding of potential observational systematics. In
+addition there are differences in the simulated density and
+temperature profiles in comparison to the observed profile in Coma
+that impact the CR abundance as well as cooling and reacceleration.
+
+In Figure~\ref{fig:tauD} we show how the turbulent reacceleration
+timescales in our three models scale with radius. As expected, the
+\Mprimary model with $\alpha_\rmn{tu}=0.88$ has the flattest profile
+with $\tau_D\approx0.4\,\rmn{Gyr}$, where the small dip at large
+radius driven by the decrease in thermal energy density. The
+\Mflatturb model has the the flattest turbulent profile parameterized
+by the smaller $\alpha_\rmn{tu}$ which explains the steepest $\tau_D$
+profile. Note that a fixed reacceleration timescale is required to
+explain the observations at each radius and for each model (see also
+Table~\ref{tab:timescales}). This allows us to interchange the value
+of uncertain parameters $\tau_\rmn{cl} \sim X_\rmn{tu}^2 \sim k_0$,
+i.e. a longer reacceleration duration have to be compensated by
+lowering the level of turbulence or increasing the physical injection
+scale of turbulence to keep $\tau_D$ constant.
+
+\begin{figure}
+  \includegraphics[width=1.0\columnwidth]{tau_reacc.eps}
+  \caption{Turbulent reacceleration timescales for our simulated
+    cluster g72a. We show in linear-log the reacceleration timescale
+    ($\tau_D$) as a function of radius $R$ for our three models:
+    \Mprimary (green dotted line), \Mstream (blue dashed line), and
+    \Mflatturb (red solid line). Note that the timescales are derived
+    during the last 100~Myrs in time in our simulations.}
+  \label{fig:tauD}
+\end{figure}
+
+In principle, reacceleration via TTD leads to spectral steepening with
+particle energy due to the inefficiency of the acceleration process to
+counter the stronger cooling losses with increasing energy. Since
+synchrotron emission peaks at frequency $\nu_\rmn{syn}\simeq 1\,
+B/\umu\rmn{G} (\gamma/10^4)^2\,\rmn{GHz}$, this translates into a
+spectral steepening of the radio spectrum (see the left panel of
+Fig.~\ref{fig:sync_spectrum} where the continuous injection of
+secondary CRes is absent). A given radio window samples higher energy
+electrons for a decreasing field strength in the cluster
+outskirts. Hence, the spectral steepening with energy should translate
+into a radial spectral steepening \citep{brunetti12}. However, because
+of the weak dependence of the electron Lorentz factor on emission
+frequency ($\gamma\propto\sqrt{\nu_\rmn{syn}}$), this effect is only
+visible in our simulations for $\nu_\rmn{syn}\gtrsim5$~GHz. Most
+importantly, our simulated fluid elements at a given radius sample a
+broad distribution of shock history, density and temperature, which
+implies very similar synchrotron brightness profiles at
+$\nu_\rmn{syn}=352$~MHz and 1.4 GHz. The discrepancy of the observed
+and simulated 1.4 GHz profiles could instead be due to systematic flux
+calibration error in single dish observations. These could arise, for
+instance, due to errors in point source subtraction. Interestingly, we
+can match the 1.4 GHz data if we reduce the zero point by adding 10\%
+of the central flux to every data point; this flattens the outer
+profile\footnote{Lawrence Rudnick, private communication.}.
+Alternatively, this may point to weaknesses in the theoretical
+modeling of the particle acceleration process and may require a
+stronger cutoff in the particle energy spectrum.
+
+
 \subsection{Radio spectrum}
 \label{sect:radio_spec}
 In Fig.~\ref{fig:sync_spectrum} we show that our three models that
@@ -1257,40 +1255,43 @@ $\zeta_{\rmn{p}}<0.03$, respectively. Following the Mach number
 \cite{pinzke13}, the efficiency in weak shocks ($\mathcal{M}\sim
 2.5-3.5$) that dominates the CR distribution function, has an
 acceleration efficiency for protons $\zeta_{\rmn{p}}\sim0.0001-0.01$,
-and for electrons $\zeta_{\rmn{e}}\sim 0.001$. Interestingly, we find
-that the radio luminosity from clusters in the OFF-state (DSA only)
-and ON-state (DSA and reacceleration) differ by about a factor 10-20
-in all our three models. \AP{This means that the secondary CRes are
-  dominated by the reaccelerated fossil CRes and not from the CRes
-  produced by reaccelerated CRps. However, for high frequencies
-  ($\nu_\rmn{syn}\gtrsim$ GHz) where synchrotron cooling is more
-  efficient than reacceleration, the emission is dominated by the CRes
-  produced in the continuous injection of electrons from reaccelerated
-  CRps. It is also worth mentioning that the radio emission from
-  secondary CRes are smoothly distributed around the cluster because
-  of the continuous injection, hence the it is not dominated by
-  outliers.} However, \sout{note that} for \Mprimary, the primary CRes
-that generate most of the radio emission from the cluster in the
-OFF-state are dominated by only a small fraction of the CRes. These
-electrons are injected very recently and have not had time to cool
-yet. Hence we expect there to be a large variance in the OFF-state of
-different simulated clusters. As mentioned in
-section~\ref{sect:param_comp}, combining radio observations with
-gamma-ray limits allows us to put a lower limit to $X_\rmn{tu}$.  If
-$X_\rmn{tu}$ is smaller than in our adopted models (where we assume
-$X_\rmn{tu}=0.2$), then the efficiency of DSA has to be larger than
-$\zeta_\rmn{p}\sim 0.1$ for the secondary CRes to reproduce the radio
-observations. However, since the turbulent reacceleration acts on both
-the secondary CRes and the CRps, while $\zeta_\rmn{p}$ only affects
-the CRps, \Mstream and \Mflatturb would produce too much
-gamma-rays. Hence we conclude that $X_\rmn{tu}\gtrsim0.2$ if all other
-parameters are kept fixed. Although, we caution the reader to take
-this limit too stringent because of the uncertainty in $k_0$ and
-$\tau_\rmn{cl}$ that impact $X_\rmn{tu}$ for a fixed
-$\tau_\rmn{D}$. This parameter space needs to be explored further in
-future work in order to put more stringent limits on the level of
-turbulence in clusters using radio and gamma-ray observations in
-combination with turbulent reaccelerated CRs.
+and for electrons $\zeta_{\rmn{e}}\sim 0.001$.
+
+Interestingly, we find that the radio luminosity from clusters in the
+OFF-state (DSA only) and ON-state (DSA and reacceleration) differ by
+about a factor 10-20 in all our three models. This means that the
+secondary CRes are dominated by the reaccelerated fossil CRes and not
+from the CRes produced by reaccelerated CRps. However, for high
+frequencies ($\nu_\rmn{syn}\gtrsim$ GHz) where synchrotron cooling is
+more efficient than reacceleration, the emission is dominated by the
+CRes produced in the continuous injection of electrons from
+reaccelerated CRps. It is also worth mentioning that the radio
+emission from secondary CRes are smoothly distributed around the
+cluster because of the continuous injection, hence the it is not
+dominated by outliers.
+
+However, for \Mprimary, the primary CRes that generate most of the
+radio emission from the cluster in the OFF-state are dominated by only
+a small fraction of the CRes. These electrons are injected very
+recently and have not had time to cool yet. Hence we expect there to
+be a large variance in the OFF-state of different simulated
+clusters. As mentioned in section~\ref{sect:param_comp}, combining
+radio observations with gamma-ray limits allows us to put a lower
+limit to $X_\rmn{tu}$.  If $X_\rmn{tu}$ is smaller than in our adopted
+models (where we assume $X_\rmn{tu}=0.2$), then the efficiency of DSA
+has to be larger than $\zeta_\rmn{p}\sim 0.1$ for the secondary CRes
+to reproduce the radio observations. However, since the turbulent
+reacceleration acts on both the secondary CRes and the CRps, while
+$\zeta_\rmn{p}$ only affects the CRps, \Mstream and \Mflatturb would
+produce too much gamma-rays. Hence we conclude that
+$X_\rmn{tu}\gtrsim0.2$ if all other parameters are kept
+fixed. Although, we caution the reader to take this limit too
+stringent because of the uncertainty in $k_0$ and $\tau_\rmn{cl}$ that
+impact $X_\rmn{tu}$ for a fixed $\tau_\rmn{D}$. This parameter space
+needs to be explored further in future work in order to put more
+stringent limits on the level of turbulence in clusters using radio
+and gamma-ray observations in combination with turbulent reaccelerated
+CRs.
 
 \begin{figure*}
   \includegraphics[width=1.0\columnwidth]{sync.spec.pri.g72a.140.v6.eps}
@@ -1388,40 +1389,45 @@ parameters.
 
 How could we distinguish the different possibilities of a dominating
 primary or secondary seed population of electrons observationally?
-\AP{I do not understand the next scentence, could you clarify?} One
-possibility that is relative insensitive to adopted parameters in our
-models is to use high-frequency radio observations (with e.g., the
-Jansky Very Large Array) where turbulent reacceleration (which has a
-high energy cutoff) is no longer efficient (see
-Fig.~\ref{fig:sync_spectrum}). The negative flux bowl of the
-Sunyaev-Zel'dovich effect introduces a cutoff of the RH spectrum at
-frequencies above $\gtrsim 10$~GHz \citep[][ depending on cluster mass
-  and redshift]{2002A&A...396L..17E,Pfrommer:2003mk}. Hence the
-subdominant \sout{hadronic} radio emission \AP{from freshly injected
-  secondary CRes} may only be detectable in steep spectrum radio
-sources \citep{2008Natur.455..944B}, which exhibit a cutoff at lower
-radio frequencies and are thought to represent dying RHs as a result
-of the decaying turbulence after a merger. Alternatively, one could
-attempt to reconstruct the intrinsic high-frequency RH spectrum by
-filling in the missing flux due to the Sunyaev-Zel'dovich effect by
-precise measurements of the Compton-$y$ parameter at microwave
+One possibility that is relative insensitive to adopted parameters in
+our models is to use high-frequency radio observations (with e.g., the
+Jansky Very Large Array) where turbulent reacceleration of CRes (which
+has a high energy cutoff) is no longer efficient since their fast
+radiative cooling time drops below the comparably slow reacceleration
+timescale producing a sharp spectral cutoff. This is unlike
+reacceleration of CRps that do not suffer radiative cooling losses and
+inject power-law momentum distributions of secondary CRe (see
+Fig.~\ref{fig:sync_spectrum}).
+
+However, the negative flux bowl of the Sunyaev-Zel'dovich effect
+introduces a cutoff of the RH spectrum at frequencies above $\gtrsim
+10$~GHz \citep[][ depending on cluster mass and
+  redshift]{2002A&A...396L..17E,Pfrommer:2003mk}. Hence the
+subdominant radio emission from freshly injected secondary CRes may
+only be detectable in steep spectrum radio sources
+\citep{2008Natur.455..944B}, which exhibit a cutoff at lower radio
+frequencies and are thought to represent dying RHs as a result of the
+decaying turbulence after a merger. Alternatively, one could attempt
+to reconstruct the intrinsic high-frequency RH spectrum by filling in
+the missing flux due to the Sunyaev-Zel'dovich effect by precise
+measurements of the Compton-$y$ parameter at microwave
 frequencies. Another possibility would consist in stacking the radio
 data of radio-quiet clusters that do not exhibit RH emission
-\AP{individually} \citep{2011ApJ...740L..28B}. This may reveal the
+individually \citep{2011ApJ...740L..28B}. This may reveal the
 glow of radio emission due to steady state secondary
 population. Emission from faint secondary electrons should still be
 visible, whereas due to the much more intermittent nature of DSA
 injection, primary CRe will instead show a sharp cutoff due to
 cooling, and will not be visible at high energies (see
-Fig.~\ref{fig:sync_spectrum}). \AP{Finally we want to mention that in
-  the near future we hope to gain valuable information about the
-  turbulent profile in galaxy clusters from the recently launched
-  X-ray satellite ASTRO-H. Alternatively, as magnetohydrodynamic
-  simulations improve, these can provide valuable insight about the
-  profile and the total energy of turbulence in clusters. This will
-  further help us to distinguish the three different models from each
-  other.} We will pursue further implications and distinguishing
-characteristics of these competing models in future work.
+Fig.~\ref{fig:sync_spectrum}).
+
+As MHD simulations of clusters that follow spectral CR distributions
+become feasible, these will provide valuable insight about the profile
+and the total energy of turbulence in clusters and the possibility of
+turbulent reacceleration. This will further help us to distinguish the
+three different models from each other. We will pursue further
+implications and distinguishing characteristics of these competing
+models in future work.
 
 
 {\bf Acknowledgments.} We thank Josh Wiener for discussions on CR
