--- a/paper.bib
+++ b/paper.bib
@@ -3899,9 +3899,7 @@
 	Author = {{Rybicki}, G.\ B. and {Lightman}, A.\ P.},
 	Publisher = {New York, Wiley-Interscience},
 	Title = {Radiative processes in astrophysics},
-	Url = {http://esoads.eso.org/cgi-bin/nph-bib_query?bibcode=1979rpa..book.....R&db_key=AST},
-	Year = 1979,
-	Bdsk-Url-1 = {http://esoads.eso.org/cgi-bin/nph-bib_query?bibcode=1979rpa..book.....R&db_key=AST}}
+	Year = 1979}
 
 @article{2004A&A...426..387S,
 	Adsnote = {Provided by the SAO/NASA Astrophysics Data System},
